# Chimp

./: COMPILING.md  GAME PLANS.md  PLANS.md  README.md  REFERENCES.md
Chimp/: CMakeLists.txt  lib_glm.bat  libsndfile_build.bat
Chimp/ChimpGame/: CMakeLists.txt  test.yml
Chimp/ChimpGame/Data/: Settings.yml
Chimp/ChimpGame/maps/: Lava.yml  Meadows.yml
Chimp/ChimpGame/shaders/: default.frag  default.vert
Chimp/ChimpGame/src/: Debug.h  GameMain.cpp  GameRenderer.cpp  GameRenderer.h  TestScene.cpp  TestScene.h  stdafx.h
Chimp/ChimpGame/src/entities/: BaseEntity.h  BloonsEntities.cpp  BloonsEntities.h  EntityIdComponent.h
Chimp/ChimpGame/src/entities/health/: HealthSystem.h
Chimp/ChimpGame/src/entities/towers/: MonkeyTowerComponent.cpp  MonkeyTowerComponent.h  TowerComponent.h  TowerTypes.h  UpgradableComponent.h  WorthComponent.h
Chimp/ChimpGame/src/entities/towers/projectiles/: Projectile.h
Chimp/ChimpGame/src/game/: BloonManager.cpp  BloonManager.h  Entities.h  GameScene.cpp  GameScene.h  MoneyManager.cpp  MoneyManager.h  Simulation.cpp  Simulation.h
Chimp/ChimpGame/src/game/bloons/: BloonManager.cpp  BloonManager.h  BloonSpawner.cpp  BloonSpawner.h
Chimp/ChimpGame/src/game/match_end/: MatchWinLoseHandler.cpp  MatchWinLoseHandler.h
Chimp/ChimpGame/src/game/towers/: TowerEditor.cpp  TowerEditor.h  TowerManager.cpp  TowerManager.h
Chimp/ChimpGame/src/game/waves/: GameWave.h  WaveManagerBuilder.h  WaveStartHandler.cpp  WaveStartHandler.h
Chimp/ChimpGame/src/gameover/: GameOverScene.cpp  GameOverScene.h
Chimp/ChimpGame/src/menu/: MenuScene.cpp  MenuScene.h  Settings.cpp
Chimp/ChimpGame/src/menu/game/: GameScene.h
Chimp/ChimpGame/src/menu/networking/: GameClient.cpp  GameClient.h  GameNetworking.cpp  GameNetworking.h  GameServer.cpp  GameServer.h  Networking.h
Chimp/ChimpGame/src/networking/: GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  Networking.h
Chimp/ChimpGame/src/networking/client/: ClientCurrentMatchHandler.cpp  ClientCurrentMatchHandler.h  TowerListener.cpp  TowerListener.h  TowerPlaceListener.cpp  TowerPlaceListener.h
Chimp/ChimpGame/src/networking/packets/: ClientGameStartPacket.h  ClientMatchStartPacket.h  ClientTowerPlacePacket.h  Packets.h
Chimp/ChimpGame/src/networking/server/: MatchHandler.cpp  MatchHandler.h  MatchSet.cpp  MatchSet.h  ServerMatch.cpp
Chimp/ChimpGame/src/rendering/: GameRenderer.cpp  GameRenderer.h
Chimp/src/: Chimp.h  Loggers.h  Logging.h  Main.h  main.cpp  stdafx.h
Chimp/src/api/: Engine.h  Maths.h
Chimp/src/api/assets/: AssetManager.h  IModelImporter.h
Chimp/src/api/audio/: IAudioImporter.h  IListener.h  IPlayingAudio.h  ISound.h
Chimp/src/api/audio/music/: MusicPlayer.h  MusicTracksContainer.h
Chimp/src/api/audio/sfx/: SoundEffectSettings.h
Chimp/src/api/ecs/: ECS.h
Chimp/src/api/ecs/components/: EntityIdComponent.h  HealthComponent.h  TransformComponent.h
Chimp/src/api/files/yaml/: YAMLBlockParser.h  YAMLSerialiser.h  YAMLWriter.h  YamlBlock.h
Chimp/src/api/graphics/: GameShader.h  GraphicsType.h  IRenderer.h  IRenderingManager.h  Mesh.h  PrimitiveType.h
Chimp/src/api/graphics/buffers/: IBuffer.h  IElementArray.h  IElementArrayLayout.h  Usage.h
Chimp/src/api/graphics/camera/: Camera.h
Chimp/src/api/graphics/images/: IImageLoader.h
Chimp/src/api/graphics/meshes/: Mesh.h  TexturedQuad.h
Chimp/src/api/graphics/shaders/: IShader.h  IShaderBuffers.h  IShaderCompiler.h  ShaderTypes.h
Chimp/src/api/graphics/textures/: ITexture.h
Chimp/src/api/logging/: Logger.h
Chimp/src/api/networking/: ConnectionInfo.h  EventHandler.h  IClient.h  IServer.h  IServerConnection.h  PacketResponseFunc.h  PacketTypeRegistry.h  ServerInfo.h
Chimp/src/api/networking/events/: NetworkEventType.h
Chimp/src/api/resources/: IModelImporter.h  MeshStorage.h  ResourceContainer.h  ResourceDependency.h  ResourceManager.h  ShaderResourceContainer.h
Chimp/src/api/resources/containers/: ImageResourceContainer.h  TextureResourceContainer.h
Chimp/src/api/scenes/: Scene.h  SceneManager.h
Chimp/src/api/threading/: ThreadPool.h
Chimp/src/api/time/: TimeManager.h
Chimp/src/api/utils/: FilePath.h  FileReader.h  InPlaceOptional.h  Maths.h  OptionalReference.h  Path.h  Random.h  RawArray.h  ThreadQueue.h  UpdateSubscriber.h
Chimp/src/api/utils/waves/: Wave.h  WaveCommand.h  WaveManager.h
Chimp/src/api/window/: IWindow.h  InputManager.h  Keys.h
Chimp/src/impl/: Engine.cpp  MainLoop.cpp  MainLoop.h
Chimp/src/impl/assets/: AssetManager.cpp
Chimp/src/impl/assets/assimp/: ModelImporter.cpp  ModelImporter.h
Chimp/src/impl/audio/libsndfile/: AudioImporter.h
Chimp/src/impl/audio/music/: MusicPlayer.cpp  MusicTracksContainer.cpp
Chimp/src/impl/audio/openal/: Audio.h  Listener.h  PlayingAudio.h  Sound.h
Chimp/src/impl/audio/sfx/: SoundEffectSettings.cpp
Chimp/src/impl/files/yaml/: YAMLBlockParser.cpp  YAMLSerialiser.cpp  YAMLWriter.cpp  YamlBlock.cpp
Chimp/src/impl/graphics/camera/: Camera.cpp
Chimp/src/impl/graphics/interfaces/: GraphicsType.cpp  IRenderer.cpp  IRenderingManager.cpp  Mesh.cpp
Chimp/src/impl/graphics/meshes/: Mesh.cpp  TexturedQuad.cpp
Chimp/src/impl/graphics/opengl/: Renderer.cpp  Renderer.h  RenderingManager.cpp  RenderingManager.h  Translations.h
Chimp/src/impl/logging/: Logger.cpp
Chimp/src/impl/networking/: IClient.cpp  IServer.cpp  IServerConnection.cpp
Chimp/src/impl/networking/enet/: Client.cpp  Client.h  Server.cpp  Server.h  ServerFactory.cpp  ServerFactory.h
Chimp/src/impl/resources/: MeshStorage.cpp  ResourceManager.cpp  ShaderResourceContainer.cpp
Chimp/src/impl/resources/assimp/: ModelImporter.cpp  ModelImporter.h
Chimp/src/impl/resources/containers/: SoundEffectResourceContainer.cpp
Chimp/src/impl/scenes/: SceneManager.cpp
Chimp/src/impl/threading/: ThreadPool.cpp
Chimp/src/impl/time/: TimeManager.cpp
Chimp/src/impl/utils/: FilePath.cpp  Maths.cpp
Chimp/src/impl/utils/waves/: Wave.cpp  WaveManager.cpp
Chimp/src/impl/window/: IWindow.cpp  InputManager.cpp  WindowGLFW.cpp  WindowGLFW.h
Chimp/src/preprocessor/: CopyAndMove.h
(+32 files in other folders)
